--- a/rapport.html
+++ b/rapport.html
@@ -7,6 +7,9 @@
     <title>Accueil</title>
 </head>
 <body>
+    <header>
+        <h1>Site de Préformation de Robin Craeye</h1>
+    </header>
     
 </body>
 </html>
