--- a/index.html
+++ b/index.html
@@ -7,10 +7,24 @@
     <title>Accueil</title>
 </head>
 <body>
+
+    <!-- HEADER -->
     <header>
         <h1>Site de Préformation de Robin Craeye</h1>
     </header>
 
+    <!-- NAV -->
+<aside>
+    <nav>
+        <ul>
+            <li><a href="index.html">Accueil</a></li>
+            <li><a href="rapport.html">Rapport</a></li>
+            <li><a href="interview.html">Interview</a></li>
+            <li><a href="parcours.html">Parcours</a></li>
+            <li><a href="conclusion.html">Conclusion</a></li>
+        </ul>
+    </nav>
+</aside>
 
 </body>
 </html>
