--- a/index.html
+++ b/index.html
@@ -9,11 +9,13 @@
 <body>
 
     <!-- HEADER -->
-    <header>
+
+<header>
         <h1>Site de Préformation de Robin Craeye</h1>
-    </header>
+</header>
 
     <!-- NAV -->
+
 <aside>
     <nav>
         <ul>
@@ -25,6 +27,30 @@
         </ul>
     </nav>
 </aside>
+
+<div class="container">
+    <section class="index-blocks">
+        <div class="index-block">
+            <h1>SECTION RAPPORT</h1>
+        </div>
+        <div class="index-block">
+            <h1>SECTION INTERVIEW</h1>
+        </div>
+    </section>
+    <section class="index-blocks">
+        <div class="index-block">
+            <h1>SECTION PARCOURS</h1>
+        </div>
+        <div class="index-block">
+            <h1>SECTION CONCLUSION</h1>
+        </div>
+    </section>
+</div>
+ 
+
+    <!-- FOOTER -->
+
+<footer> &copy; Robin Craeye - Site de préformation</footer>
 
 </body>
 </html>
