CSS clear / Start index

--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
     <!-- NAV -->
 
 <aside>
+    <div class="navbar">
     <nav>
         <ul>
             <li><a href="index.html">Accueil</a></li>
@@ -26,23 +27,36 @@
             <li><a href="conclusion.html">Conclusion</a></li>
         </ul>
     </nav>
+    </div>
 </aside>
 
 <div class="container">
     <section class="index-blocks">
         <div class="index-block">
+            <a href="rapport.html">
             <h1>SECTION RAPPORT</h1>
+            <p>Vous trouverez ici la section Rapport</p>
+        </a> 
         </div>
         <div class="index-block">
+            <a href="interview.html">
             <h1>SECTION INTERVIEW</h1>
+            <p>Vous trouverez ici la section Inteview</p>
+            </a>
         </div>
     </section>
     <section class="index-blocks">
         <div class="index-block">
+            <a href="parcours.html">
             <h1>SECTION PARCOURS</h1>
+            <p>Vous trouverez ici la section Parcours</p>
+            </a>
         </div>
         <div class="index-block">
+            <a href="conclusion.html">
             <h1>SECTION CONCLUSION</h1>
+            <p>Vous trouverez ici la section Conclusion</p>
+            </a>
         </div>
     </section>
 </div>
