--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
             <p>Vous trouverez ici la section Rapport</p>
         </a> 
         </div>
-        <div class="index-block">
+        <div class="index-block-b">
             <a href="interview.html">
             <h1>SECTION INTERVIEW</h1>
             <p>Vous trouverez ici la section Inteview</p>
@@ -52,7 +52,7 @@
             <p>Vous trouverez ici la section Parcours</p>
             </a>
         </div>
-        <div class="index-block">
+        <div class="index-block-b">
             <a href="conclusion.html">
             <h1>SECTION CONCLUSION</h1>
             <p>Vous trouverez ici la section Conclusion</p>
