--- a/index.html
+++ b/index.html
@@ -31,40 +31,40 @@
 </aside>
 
 <div class="container">
-    <section class="index-blocks">
-        <div class="index-block">
+    <div class="boxs">
+        <div class="box1">
             <a href="rapport.html">
             <h1>SECTION RAPPORT</h1>
             <p>Vous trouverez ici la section Rapport</p>
         </a> 
         </div>
-        <div class="index-block-b">
+        <div class="box2">
             <a href="interview.html">
             <h1>SECTION INTERVIEW</h1>
             <p>Vous trouverez ici la section Inteview</p>
             </a>
         </div>
-    </section>
-    <section class="index-blocks">
-        <div class="index-block">
+    </div>
+    <div class="boxs">
+        <div class="box3">
             <a href="parcours.html">
             <h1>SECTION PARCOURS</h1>
             <p>Vous trouverez ici la section Parcours</p>
             </a>
         </div>
-        <div class="index-block-b">
+        <div class="box4">
             <a href="conclusion.html">
             <h1>SECTION CONCLUSION</h1>
             <p>Vous trouverez ici la section Conclusion</p>
             </a>
         </div>
-    </section>
+    </div>
 </div>
  
 
     <!-- FOOTER -->
 
-<footer> &copy; Robin Craeye - Site de préformation</footer>
+<div class="footer-index"> &copy; Robin Craeye - Site de préformation</footer></div>
 
 </body>
 </html>
