Font + Subtitle bar

--- a/parcours.html
+++ b/parcours.html
@@ -29,6 +29,7 @@
 <div class="container">
     <div class="parcours">
         <h2>Mon parcours</h2>
+        <div class="container-subtitle"></div>
         <h3>D’où je viens ? Qui je suis ? Vers où je vais ?</h3>
         <p>Je suis Robin Craeye, après 10 ans d’expérience dans le domaine de la vente et des études en art plastique je décide de me lancer dans une reconversion en tant que développeur web.
 Étant passionné d’informatique depuis ma tendre enfance je me suis dirigé naturellement sur mon temps libre vers le développement, effectivement le côté logique et casse-tête de l’exercice me plait et m’attire énormément.
