--- a/conclusion.html
+++ b/conclusion.html
@@ -4,12 +4,48 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="/css/style.css">
-    <title>Accueil</title>
+    <title>Conclusion</title>
 </head>
 <body>
+    <!-- HEADER -->
     <header>
         <h1>Site de Préformation de Robin Craeye</h1>
     </header>
-    
+    <!-- NAV -->
+
+    <aside>
+    <div class="navbar">
+    <nav>
+        <ul>
+            <li><a href="index.html">Accueil</a></li>
+            <li><a href="rapport.html">Rapport</a></li>
+            <li><a href="interview.html">Interview</a></li>
+            <li><a href="parcours.html">Parcours</a></li>
+            <li><a href="conclusion.html">Conclusion</a></li>
+        </ul>
+    </nav>
+    </div>
+</aside>
+
+<div class="container">
+    <div class="conclusion">
+        <h2>Conclusion générale</h2>
+        <div class="container-subtitle"></div>
+        <h3>Bilan du projet et de la pré-formation</h3>
+        <p><strong>Un premier mois formateur</strong> Ce premier mois m'a permis de poser des fondations solides. J'ai pu appréhender les mécaniques du développement web et comprendre que le code n'est qu'un outil au service d'une stratégie plus large. L'apprentissage de la logique de programmation m'a donné les clés pour comprendre les défis techniques mentionnés lors de l'interview, notamment l'importance de structurer sa pensée avant de coder.</p>
+<p><strong>Le lien avec le terrain</strong> L'échange avec Maxime Herbiet a confirmé une intuition : le métier évolue vers une hybridation des compétences. La maîtrise du Web doit désormais s'allier à une bonne communication et à une compréhension des outils modernes comme l'IA. Découvrir comment une structure agile transforme des problématiques complexes en solutions fluides a été très instructif. </p>
+<p><strong>Perspectives</strong> En conclusion, ce travail valide mon intérêt pour le secteur de la tech. Il me conforte dans mon choix d'orientation et me donne une vision claire des attentes du marché actuel : curiosité, adaptabilité et rigueur. Je repars de ce premier mois avec une vision plus concrète de mon futur métier et une envie renforcée d'approfondir mes compétences techniques lors de la prochaine étape de ma formation.</p>
+
+</p>
+    </div>
+</div>
+
+
+
+<!-- FOOTER -->
+
+<footer> &copy; Robin Craeye - Site de préformation</footer>
+
+</body>
 </body>
 </html>
