--- a/parcours.html
+++ b/parcours.html
@@ -7,6 +7,7 @@
     <title>Parcours</title>
 </head>
 <body>
+<!-- HEADER -->
     <header>
         <h1>Site de Préformation de Robin Craeye</h1>
     </header>
