Interview et images

--- a/interview.html
+++ b/interview.html
@@ -7,9 +7,42 @@
     <title>Accueil</title>
 </head>
 <body>
-    <header>
+    <!-- HEADER -->
+
+<header>
         <h1>Site de Préformation de Robin Craeye</h1>
-    </header>
-    
+</header>
+
+    <!-- NAV -->
+
+<aside>
+    <div class="navbar">
+    <nav>
+        <ul>
+            <li><a href="index.html">Accueil</a></li>
+            <li><a href="rapport.html">Rapport</a></li>
+            <li><a href="interview.html">Interview</a></li>
+            <li><a href="parcours.html">Parcours</a></li>
+            <li><a href="conclusion.html">Conclusion</a></li>
+        </ul>
+    </nav>
+    </div>
+</aside>
+
+<div class="container">
+    <div class="card-maxime">
+        <img src="images/maxime.jpg" alt="Maxime Developer Web">
+        <h2>Maxime Herbiet</h2>
+        <div class="container-subtitle"></div>
+        <h3>Developer Analyst</h3><br>
+        <p>Maxime est issu d'une formation intensive de 6 mois à MolenGeek, complétée par une démarche autodidacte rigoureuse. Son profil est la preuve que la motivation et la capacité à apprendre par soi-même sont des atouts majeurs dans ce secteur, parfois plus que les diplômes universitaires classiques.</p>
+        
+    </div>
+</div>
+    <!-- FOOTER -->
+
+<footer> &copy; Robin Craeye - Site de préformation</footer>
+
+
 </body>
 </html>
