--- a/rapport.html
+++ b/rapport.html
@@ -7,9 +7,27 @@
     <title>Accueil</title>
 </head>
 <body>
-    <header>
+    <!-- HEADER -->
+
+<header>
         <h1>Site de Préformation de Robin Craeye</h1>
-    </header>
+</header>
+
+    <!-- NAV -->
+
+<aside>
+    <div class="navbar">
+    <nav>
+        <ul>
+            <li><a href="index.html">Accueil</a></li>
+            <li><a href="rapport.html">Rapport</a></li>
+            <li><a href="interview.html">Interview</a></li>
+            <li><a href="parcours.html">Parcours</a></li>
+            <li><a href="conclusion.html">Conclusion</a></li>
+        </ul>
+    </nav>
+    </div>
+</aside>
     
 </body>
 </html>
