cardre maxime + image

--- a/interview.html
+++ b/interview.html
@@ -30,14 +30,15 @@
 </aside>
 
 <div class="container">
+    <div class="titre"><h1> Rencontre avec un développeur</h1></div>
+    <div class="container-subtitle"></div>
     <div class="card-maxime">
         <img src="images/maxime.jpg" alt="Maxime Developer Web">
         <h2>Maxime Herbiet</h2>
         <div class="container-subtitle"></div>
         <h3>Developer Analyst</h3><br>
         <p>Maxime est issu d'une formation intensive de 6 mois à MolenGeek, complétée par une démarche autodidacte rigoureuse. Son profil est la preuve que la motivation et la capacité à apprendre par soi-même sont des atouts majeurs dans ce secteur, parfois plus que les diplômes universitaires classiques.</p>
-        
-    </div>
+        </div>
 </div>
     <!-- FOOTER -->
 
