--- a/parcours.html
+++ b/parcours.html
@@ -28,6 +28,7 @@
 </aside>
 
 <div class="container">
+    
     <div class="parcours">
         <h2>Mon parcours</h2>
         <div class="container-subtitle"></div>
@@ -40,6 +41,18 @@ Ce parcours de préformation a confirmé mon choix de carrière. Je quitte le mo
 D’ici deux ans, je me projette comme un développeur full-stack polyvalent en agence, où je pourrai lier mon sens de l’esthétique à la technicité du Web. Aujourd’hui, je suis prêt à transformer cette passion en métier et à mettre ma persévérance au service de projets qui font sens.
 </p>
     </div>
+    <div class="qa">
+        <div class="question">
+
+        </div>
+        <div class="answer">
+
+        </div>
+
+    </div>
+
+
+
 </div>
 
 
