--- a/conclusion.html
+++ b/conclusion.html
@@ -36,7 +36,24 @@
 <p><strong>Le lien avec le terrain</strong> L'échange avec Maxime Herbiet a confirmé une intuition : le métier évolue vers une hybridation des compétences. La maîtrise du Web doit désormais s'allier à une bonne communication et à une compréhension des outils modernes comme l'IA. Découvrir comment une structure agile transforme des problématiques complexes en solutions fluides a été très instructif. </p>
 <p><strong>Perspectives</strong> En conclusion, ce travail valide mon intérêt pour le secteur de la tech. Il me conforte dans mon choix d'orientation et me donne une vision claire des attentes du marché actuel : curiosité, adaptabilité et rigueur. Je repars de ce premier mois avec une vision plus concrète de mon futur métier et une envie renforcée d'approfondir mes compétences techniques lors de la prochaine étape de ma formation.</p>
 
-</p>
+    </div>
+
+    <div class="conclusion-max">
+        <h2>Bilan de l'échange</h2>
+        <div class="container-subtitle"></div>
+        <h3>Mes surprises suite à l’interview</h3>
+        <p>Cet entretien m'a permis de mettre en lumière plusieurs réalités du métier qui m’était méconnu : </p>
+
+        <p><strong>- Communication > Technique :</strong> La capacité à échanger est la compétence numéro 1 attendue chez un junior. <br>
+        <strong>- Qualité > Rapidité :</strong>  Écrire du code "propre" et lisible est plus important que 	d'écrire du code complexe. Le code doit pouvoir être repris par n'importe quel 	collègue sans effort de déchiffrage.</p>
+
+        <p><strong>- L'IA comme alliée :</strong> Même avec 6 ans d'expérience, l'IA est utilisée comme un outil de productivité et de validation d'architecture, sans jamais remplacer la réflexion.</p>
+        
+        <p><strong>- L'apprentissage par l'erreur :</strong> Le développement est un métier empirique. Il faut  oser tester et se tromper pour progresser durablement.</p>
+
+        <p><strong>- La Curiosité vs l'Expertise :</strong> J'ai réalisé que l'on n'est jamais réellement "arrivé" au bout de son apprentissage. La capacité à apprendre par soi-même (apprendre à apprendre) est plus précieuse que la maîtrise d'un langage précis à un instant T.</p>
+
+</div>
     </div>
 </div>
 
