--- a/interview.html
+++ b/interview.html
@@ -41,46 +41,54 @@
     </div>
 
     <div class="qa">
+        <div class="qa-a">
         <div class="question"><span class="number">1</span> On parle beaucoup de la 'passion' dans ce métier. Est-ce qu'on peut être un excellent dev si on voit ça 'juste' comme un travail de 9h à 17h ?</div>
         <div class="answer">Je pense que oui, quelqu’un de très discipliné fera ce qu’il y a à faire mais je pense que ce ne sera pas agréable. Il faut vraiment aimer résoudre des problèmes pour continuer à avancer avec le sourire haha.</div>
-    </div>
+       </div>
 
-    <div class="qa">
+       <div class="qa-b">
         <div class="question"><span class="number">2</span> Le contenu du travail change vite : comment fais-tu pour ne pas te sentir dépassé par la vitesse à laquelle les technos évoluent ? </div>
         <div class="answer">Des vidéos YouTube en général pour les technos nouvelles ou celles que je n’utilise pas, sinon les documentations et infos sur celles que j’utilise quotidiennement.</div>
+       </div>
     </div>
-
     <div class="qa">
+    <div class="qa-a">
         <div class="question"><span class="number">3</span> On imagine souvent le dev seul devant son écran noir : dans ta réalité, quel pourcentage de ta journée passes-tu vraiment à coder ?  </div>
         <div class="answer">Sur une semaine je dirais que je passe pour l’instant 5% de mon temps en réunion, le reste c’est de la réflexion et du code, mais ça peut varier si on doit discuter des nouvelles fonctionnalités ou projets.</div>
     </div>
 
-    <div class="qa">
+    <div class="qa-b quatre">
         <div class="question"><span class="number">4</span> Pour un débutant, le télétravail fait rêver. Avec le recul, est-ce un cadeau ou un piège pour la progression technique ?  </div>
         <div class="answer">Je pense qu’avec l’IA qui peut expliquer les problèmes et pourquoi telle chose marche de telle ou telle manière, ça remplace un peu la « nécessité » d’un senior qui explique un peu tout au junior. Après il faut le faire de manière éducative : d’abord essayer par soi-même et vraiment en cas de blocage, demander à l’IA et comprendre ce qui n’allait pas.</div>
     </div>
-
-    <div class="qa">
+</div>
+<div class="qa">
+    <div class="qa-a">
         <div class="question"><span class="number">5</span> Quelle place a pris l'IA dans ton métier ?</div>
         <div class="answer">Je ne l’utilise pas encore beaucoup, à part pour l’autocomplétion qui est parfois très bien générée et qui fait gagner pas mal de temps. Sinon parfois pour des décisions sur l’architecture de la DB/des ressources… voir si ce que j’imaginais est le mieux ou s’il n’y a pas des alternatives meilleures.</div>
     </div>
-    <div class="qa">
-        <div class="question"><span class="number">6</span> Si tu devais recruter un junior demain, quelle qualité humaine (soft skill) ferais-tu passer avant le niveau technique ? </div>
-        <div class="answer">La communication.</div>
+    <div class="qa-b">
+        <div class="question"><span class="number">6</span> Comment est organisée l'équipe technique ? </div>
+        <div class="answer">Ça dépend un peu des projets mais en général on a quelqu’un de fonctionnel qui communique avec le client et avec nous (même si on communique aussi avec les clients mais moins) et puis il y a un ou plusieurs devs par projet en fonction des besoins.</div>
     </div>
-    <div class="qa">
+</div>
+<div class="qa">
+    <div class="qa-a">
         <div class="question"><span class="number">7</span> Est-ce qu'il y a une vraie solidarité entre développeurs quand on bloque, ou est-ce que c'est chacun pour soi ? </div>
         <div class="answer">Comme pour l’entièreté de l’humanité il y a de tout. Maintenant oui, je pense que les devs sont quand même dans la globalité plus solidaires, grâce à l’open source, les forums…</div>
     </div>
-    <div class="qa">
-        <div class="question"><span class="number">8</span> Comment est organisée l'équipe technique ?  </div>
-        <div class="answer">Ça dépend un peu des projets mais en général on a quelqu’un de fonctionnel qui communique avec le client et avec nous (même si on communique aussi avec les clients mais moins) et puis il y a un ou plusieurs devs par projet en fonction des besoins.</div>
+    <div class="qa-b">
+        <div class="question"><span class="number">8</span> Si tu devais recruter un junior demain, quelle qualité humaine (soft skill) ferais-tu passer avant le niveau technique ?</div>
+        <div class="answer">La communication.</div>
     </div>
+    </div>
+    
     <div class="qa">
         <div class="question"><span class="number">9</span> Quelle est votre 'stack' (langages, frameworks) principale ? Avez-vous une liberté de choix ?</div>
         <div class="answer">Oui on a une certaine liberté mais elle doit néanmoins être justifiée, parce qu’on essaye quand même d’uniformiser au mieux ce qu’on utilise, pour qu’on puisse tous un peu s’aider si besoin. Pour l’instant je dirais que c’est principalement des projets .NET(C#) quand ça aura besoin de pas mal de fonctionnalités complexes, et sinon du Python pour les petits process/automatisations/IA.</div>
     </div>
 </div>
+<div class="container-subtitle"></div>
     <!-- FOOTER -->
 
 <footer> &copy; Robin Craeye - Site de préformation</footer>
