intro rapport + css

--- a/rapport.html
+++ b/rapport.html
@@ -29,5 +29,23 @@
     </div>
 </aside>
     
+<div class="container">
+    <div class="titre"><h1> Rapport d'entreprise</h1></div>
+    <div class="titre"><h3>REiMAGINE</h3></div>
+<div class="container-subtitle"></div>
+<div class="rapport-intro">
+<p><strong>REIMAGINE</strong> est une société de conseil et de développement technologique située à Bruxelles. Fondée sur une vision moderne du service numérique, elle se positionne à l'intersection précise entre le conseil stratégique et la réalisation technique.</p>
+<img src="/images/logo-reimage.png" alt="Logo_Reimagine">
+</div>
+
+
+
+
+
+</div>
+<div class="container-subtitle"></div>
+    <!-- FOOTER -->
+
+<footer> &copy; Robin Craeye - Site de préformation</footer>
 </body>
 </html>
