box rapport + hover

--- a/rapport.html
+++ b/rapport.html
@@ -38,7 +38,36 @@
 <img src="/images/logo-reimage.png" alt="Logo_Reimagine">
 </div>
 
-
+<div class="entreprise-id">
+    <div class="entreprise-box">
+        <p>Secteur d'activité</p>
+        <h2>Développement WEB</h2>
+    </div>
+    <div class="entreprise-box-b">
+        <p>Type de clients</p>
+        <h2>PME & GE</h2>
+    </div>
+</div>
+<div class="entreprise-id">
+    <div class="entreprise-box">
+        <p>Structure</p>
+        <h2>AGILE</h2>
+    </div>
+    <div class="entreprise-box-b">
+        <p>Taille</p>
+        <h2>~20 personnes</h2>
+    </div>
+</div>
+<div class="entreprise-id">
+    <div class="entreprise-box">
+        <p>CP</p>
+        <h2>200</h2>
+    </div>
+    <div class="entreprise-box-b">
+        <p>Localisation</p>
+        <h2>Zaventem</h2>
+    </div>
+</div>
 
 
 
