--- a/rapport.html
+++ b/rapport.html
@@ -55,12 +55,12 @@
     </div>
     <div class="entreprise-box-b">
         <p>Taille</p>
-        <h2>~20 personnes</h2>
+        <h2>~ 20 personnes</h2>
     </div>
 </div>
 <div class="entreprise-id">
     <div class="entreprise-box">
-        <p>CP</p>
+        <p>Commission Paritaire</p>
         <h2>200</h2>
     </div>
     <div class="entreprise-box-b">
@@ -69,6 +69,22 @@
     </div>
 </div>
 
+<div class="conclusion-max entreprise">
+    <h2>Organisation et Méthodologie</h2>
+    <div class="container-subtitle"></div>
+    
+    <p>
+<strong>L'approche "End-to-End" :</strong> <em>REIMAGINE </em> gère le projet de l'idée jusqu'à la mise en production.</p>
+<p><strong>Les différents rôles :</strong>
+	 <strong>- Le pôle Fonctionnel :</strong> Il fait le pont entre le besoin business du client et la réalité technique <br>
+  	 <strong>- Le pôle Technique :</strong> Composé de développeurs qui travaillent souvent en binôme ou en petites équipes selon l'ampleur du projet.</p>
+<p><strong>Environnement Technique (Stack) :</strong> L'entreprise utilise des technologies robustes et modernes, adaptées à la complexité des demandes :</p>
+<p><strong>.NET (C#) :</strong> Privilégié pour les projets d'envergure nécessitant une architecture complexe.</p>
+<p><strong>Python :</strong> Le langage de référence pour tout ce qui touche à l'Intelligence Artificielle, l'automatisation et la Data Science.
+</p>
+
+
+</div>
 
 
 </div>
