interview css box

--- a/rapport.html
+++ b/rapport.html
@@ -75,14 +75,15 @@
     
     <p>
 <strong>L'approche "End-to-End" :</strong> <em>REIMAGINE </em> gère le projet de l'idée jusqu'à la mise en production.</p>
-<p><strong>Les différents rôles :</strong>
+<p><strong>Les différents rôles :</strong> <br>
 	 <strong>- Le pôle Fonctionnel :</strong> Il fait le pont entre le besoin business du client et la réalité technique <br>
   	 <strong>- Le pôle Technique :</strong> Composé de développeurs qui travaillent souvent en binôme ou en petites équipes selon l'ampleur du projet.</p>
 <p><strong>Environnement Technique (Stack) :</strong> L'entreprise utilise des technologies robustes et modernes, adaptées à la complexité des demandes :</p>
 <p><strong>.NET (C#) :</strong> Privilégié pour les projets d'envergure nécessitant une architecture complexe.</p>
 <p><strong>Python :</strong> Le langage de référence pour tout ce qui touche à l'Intelligence Artificielle, l'automatisation et la Data Science.
 </p>
-
+<p><strong>Localisation :</strong> 6 Lenneke Marelaan 1932 Zaventem</p>
+<p><strong>Commission Paritaire :</strong> CP200</p>
 
 </div>
 
