--- a/rapport.html
+++ b/rapport.html
@@ -69,8 +69,8 @@
     </div>
 </div>
 
-<div class="conclusion-max entreprise">
-    <h2>Organisation et Méthodologie</h2>
+<div class="conclusion-entreprise">
+    <img src="/images/reimagine_logo_fond.png" alt="Reimagine_Logo"><h2>Organisation et Méthodologie</h2>
     <div class="container-subtitle"></div>
     
     <p>
