logo footer/nav

--- a/rapport.html
+++ b/rapport.html
@@ -24,6 +24,7 @@
             <li><a href="interview.html">Interview</a></li>
             <li><a href="parcours.html">Parcours</a></li>
             <li><a href="conclusion.html">Conclusion</a></li>
+            <li><img src="/images/logo.png" alt="Logo_robin"></li>
         </ul>
     </nav>
     </div>
@@ -92,6 +93,6 @@
 <div class="container-subtitle"></div>
     <!-- FOOTER -->
 
-<footer> &copy; Robin Craeye - Site de préformation</footer>
+<footer> <p> &copy; Robin Craeye - Site de préformation <img src="/images/logo.png" alt="Logo_robin"></p> </footer>
 </body>
 </html>
