--- a/conclusion.html
+++ b/conclusion.html
@@ -22,6 +22,7 @@
             <li><a href="interview.html">Interview</a></li>
             <li><a href="parcours.html">Parcours</a></li>
             <li><a href="conclusion.html">Conclusion</a></li>
+            <li><img src="/images/logo.png" alt="Logo_robin"></li>
         </ul>
     </nav>
     </div>
@@ -60,7 +61,7 @@
 
 <!-- FOOTER -->
 
-<footer> &copy; Robin Craeye - Site de préformation</footer>
+<footer> <p> &copy; Robin Craeye - Site de préformation <img src="/images/logo.png" alt="Logo_robin"></p> </footer>
 
 </body>
 </body>
