--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
             <li><a href="interview.html">Interview</a></li>
             <li><a href="parcours.html">Parcours</a></li>
             <li><a href="conclusion.html">Conclusion</a></li>
+            <li><img src="/images/logo.png" alt="Logo_robin"></li>
         </ul>
     </nav>
     </div>
@@ -64,7 +65,7 @@
 
     <!-- FOOTER -->
 
-<div class="footer-index"> &copy; Robin Craeye - Site de préformation</footer></div>
+<div class="footer-index"> <p>&copy; Robin Craeye - Site de préformation <img src="/images/logo.png" alt="Logo_robin"></p></footer></div>
 
 </body>
 </html>
