Ombre + Ajout image index

--- a/index.html
+++ b/index.html
@@ -33,16 +33,16 @@
 
 <div class="container">
     <div class="boxs">
-        <div class="box1">
-            <a href="rapport.html">
-            <h1>SECTION RAPPORT</h1>
-            <p>Vous trouverez ici la section Rapport</p>
+       <a href="rapport.html"><div class="box1">
+            
+            <h1>RAPPORT ENTREPRISE</h1>
+            <img src="/images/reimagine_logo_fond.png" alt="logo_reimage">
         </a> 
         </div>
         <div class="box2">
             <a href="interview.html">
             <h1>SECTION INTERVIEW</h1>
-            <p>Vous trouverez ici la section Inteview</p>
+            <img src="/images/maxime.jpg" alt="logo_reimage">
             </a>
         </div>
     </div>
