--- a/rapport.html
+++ b/rapport.html
@@ -69,7 +69,7 @@
         <h2>Zaventem</h2>
     </div>
 </div>
-
+<div class="container-subtitle"></div>
 <div class="conclusion-entreprise">
     <img src="/images/reimagine_logo_fond.png" alt="Reimagine_Logo"><h2>Organisation et Méthodologie</h2>
     <div class="container-subtitle"></div>
@@ -77,14 +77,14 @@
     <p>
 <strong>L'approche "End-to-End" :</strong> <em>REIMAGINE </em> gère le projet de l'idée jusqu'à la mise en production.</p>
 <p><strong>Les différents rôles :</strong> <br>
-	 <strong>- Le pôle Fonctionnel :</strong> Il fait le pont entre le besoin business du client et la réalité technique <br>
+	 <strong>- Le pôle Fonctionnel :</strong> Il fait le pont entre le besoin business du client et la réalité technique. <br>
   	 <strong>- Le pôle Technique :</strong> Composé de développeurs qui travaillent souvent en binôme ou en petites équipes selon l'ampleur du projet.</p>
 <p><strong>Environnement Technique (Stack) :</strong> L'entreprise utilise des technologies robustes et modernes, adaptées à la complexité des demandes :</p>
-<p><strong>.NET (C#) :</strong> Privilégié pour les projets d'envergure nécessitant une architecture complexe.</p>
-<p><strong>Python :</strong> Le langage de référence pour tout ce qui touche à l'Intelligence Artificielle, l'automatisation et la Data Science.
+<p><strong>- .NET (C#) :</strong> Privilégié pour les projets d'envergure nécessitant une architecture complexe.</p>
+<p><strong>- Python :</strong> Le langage de référence pour tout ce qui touche à l'Intelligence Artificielle, l'automatisation et la Data Science.
 </p>
 <p><strong>Localisation :</strong> 6 Lenneke Marelaan 1932 Zaventem</p>
-<p><strong>Commission Paritaire :</strong> CP200</p>
+<p><strong>Commission Paritaire :</strong> CP200, en général dans le milieu nous retrouvons cette CP.</p>
 
 </div>
 
