Image box index + shadow

--- a/index.html
+++ b/index.html
@@ -31,10 +31,9 @@
     </div>
 </aside>
 
-<div class="container">
+    <div class="container">
     <div class="boxs">
        <a href="rapport.html"><div class="box1">
-            
             <h1>RAPPORT ENTREPRISE</h1>
             <img src="/images/reimagine_logo_fond.png" alt="logo_reimage">
         </a> 
@@ -42,7 +41,7 @@
         <div class="box2">
             <a href="interview.html">
             <h1>SECTION INTERVIEW</h1>
-            <img src="/images/maxime.jpg" alt="logo_reimage">
+            <img src="/images/maxime.jpg" alt="logo_reimagine">
             </a>
         </div>
     </div>
@@ -50,13 +49,13 @@
         <div class="box3">
             <a href="parcours.html">
             <h1>SECTION PARCOURS</h1>
-            <p>Vous trouverez ici la section Parcours</p>
+            <img src="/images/logo.png" alt="Logo_Fox">
             </a>
         </div>
         <div class="box4">
             <a href="conclusion.html">
             <h1>SECTION CONCLUSION</h1>
-            <p>Vous trouverez ici la section Conclusion</p>
+            <img src="/images/fond-header.jpg" alt="tech">
             </a>
         </div>
     </div>
