fix css local + img

--- a/conclusion.html
+++ b/conclusion.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/css/style.css">
+    <link rel="stylesheet" href="css/style.css">
     <title>Conclusion</title>
 </head>
 <body>
@@ -22,7 +22,7 @@
             <li><a href="interview.html">Interview</a></li>
             <li><a href="parcours.html">Parcours</a></li>
             <li><a href="conclusion.html">Conclusion</a></li>
-            <li><img src="/images/logo.png" alt="Logo_robin"></li>
+            <li><img src="images/logo.png" alt="Logo_robin"></li>
         </ul>
     </nav>
     </div>
@@ -61,7 +61,7 @@
 
 <!-- FOOTER -->
 
-<footer> <p> &copy; Robin Craeye - Site de préformation <img src="/images/logo.png" alt="Logo_robin"></p> </footer>
+<footer> <p> &copy; Robin Craeye - Site de préformation <img src="images/logo.png" alt="Logo_robin"></p> </footer>
 
 </body>
 </body>
