--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/css/style.css">
+    <link rel="stylesheet" href="css/style.css">
     <title>Accueil</title>
 </head>
 <body>
@@ -25,7 +25,7 @@
             <li><a href="interview.html">Interview</a></li>
             <li><a href="parcours.html">Parcours</a></li>
             <li><a href="conclusion.html">Conclusion</a></li>
-            <li><img src="/images/logo.png" alt="Logo_robin"></li>
+            <li><img src="images/logo.png" alt="Logo_robin"></li>
         </ul>
     </nav>
     </div>
@@ -35,13 +35,13 @@
     <div class="boxs">
        <a href="rapport.html"><div class="box1">
             <h1>RAPPORT ENTREPRISE</h1>
-            <img src="/images/reimagine_logo_fond.png" alt="logo_reimage">
+            <img src="images/reimagine_logo_fond.png" alt="logo_reimage">
         </a> 
         </div>
         <div class="box2">
             <a href="interview.html">
             <h1>SECTION INTERVIEW</h1>
-            <img src="/images/maxime.jpg" alt="logo_reimagine">
+            <img src="images/maxime.jpg" alt="logo_reimagine">
             </a>
         </div>
     </div>
@@ -49,13 +49,13 @@
         <div class="box3">
             <a href="parcours.html">
             <h1>SECTION PARCOURS</h1>
-            <img src="/images/logo.png" alt="Logo_Fox">
+            <img src="images/logo.png" alt="Logo_Fox">
             </a>
         </div>
         <div class="box4">
             <a href="conclusion.html">
             <h1>SECTION CONCLUSION</h1>
-            <img src="/images/fond-header.jpg" alt="tech">
+            <img src="images/fond-header.jpg" alt="tech">
             </a>
         </div>
     </div>
@@ -64,7 +64,7 @@
 
     <!-- FOOTER -->
 
-<div class="footer-index"> <p>&copy; Robin Craeye - Site de préformation <img src="/images/logo.png" alt="Logo_robin"></p></footer></div>
+<div class="footer-index"> <p>&copy; Robin Craeye - Site de préformation <img src="images/logo.png" alt="Logo_robin"></p></footer></div>
 
 </body>
 </html>
