--- a/parcours.html
+++ b/parcours.html
@@ -1,58 +1,71 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="fr">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/css/style.css">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="css/style.css" />
     <title>Parcours</title>
-</head>
-<body>
-<!-- HEADER -->
+  </head>
+  <body>
+    <!-- HEADER -->
     <header>
-        <h1>Site de Préformation de Robin Craeye</h1>
+      <h1>Site de Préformation de Robin Craeye</h1>
     </header>
-<!-- NAV -->
+    <!-- NAV -->
 
     <aside>
-    <div class="navbar">
-    <nav>
-        <ul>
+      <div class="navbar">
+        <nav>
+          <ul>
             <li><a href="index.html">Accueil</a></li>
             <li><a href="rapport.html">Rapport</a></li>
             <li><a href="interview.html">Interview</a></li>
             <li><a href="parcours.html">Parcours</a></li>
             <li><a href="conclusion.html">Conclusion</a></li>
-            <li><img src="/images/logo.png" alt="Logo_robin"></li>
-        </ul>
-    </nav>
-    </div>
-</aside>
+            <li><img src="images/logo.png" alt="Logo_robin" /></li>
+          </ul>
+        </nav>
+      </div>
+    </aside>
 
-<div class="container">
-    
-    <div class="parcours">
+    <div class="container">
+      <div class="parcours">
         <h2>Mon parcours</h2>
         <div class="container-subtitle"></div>
         <h3>D’où je viens ? Qui je suis ? Vers où je vais ?</h3>
-        <p>Je suis Robin Craeye, après 10 ans d’expérience dans le domaine de la vente et des études en art plastique je décide de me lancer dans une reconversion en tant que développeur web.
-Étant passionné d’informatique depuis ma tendre enfance je me suis dirigé naturellement sur mon temps libre vers le développement, effectivement le côté logique et casse-tête de l’exercice me plait et m’attire énormément.
-Après un apprentissage en tant qu’autodidacte, j’ai remarqué que je prenais énormément de plaisir dans cette activité et que je me verrais bien travailler dans le monde du Web. Je n’avais plus qu’une idée en tête : trouver une formation intensive et adapter à mon profil. 
-Grâce à mes 10 ans d’expérience dans la vente, j’aspire à intégrer une agence web où le contact client et la compréhension des besoins sont primordiaux. 
-Ce parcours de préformation a confirmé mon choix de carrière. Je quitte le monde de la vente avec un bagage relationnel solide pour m’investir pleinement dans le développement web, un domaine où chaque ligne de code est une opportunité de créer.
-D’ici deux ans, je me projette comme un développeur full-stack polyvalent en agence, où je pourrai lier mon sens de l’esthétique à la technicité du Web. Aujourd’hui, je suis prêt à transformer cette passion en métier et à mettre ma persévérance au service de projets qui font sens.
-</p>
+        <p>
+          Je suis Robin Craeye, après 10 ans d’expérience dans le domaine de la
+          vente et des études en art plastique je décide de me lancer dans une
+          reconversion en tant que développeur web. Étant passionné
+          d’informatique depuis ma tendre enfance je me suis dirigé
+          naturellement sur mon temps libre vers le développement, effectivement
+          le côté logique et casse-tête de l’exercice me plait et m’attire
+          énormément. Après un apprentissage en tant qu’autodidacte, j’ai
+          remarqué que je prenais énormément de plaisir dans cette activité et
+          que je me verrais bien travailler dans le monde du Web. Je n’avais
+          plus qu’une idée en tête : trouver une formation intensive et adapter
+          à mon profil. Grâce à mes 10 ans d’expérience dans la vente, j’aspire
+          à intégrer une agence web où le contact client et la compréhension des
+          besoins sont primordiaux. Ce parcours de préformation a confirmé mon
+          choix de carrière. Je quitte le monde de la vente avec un bagage
+          relationnel solide pour m’investir pleinement dans le développement
+          web, un domaine où chaque ligne de code est une opportunité de créer.
+          D’ici deux ans, je me projette comme un développeur full-stack
+          polyvalent en agence, où je pourrai lier mon sens de l’esthétique à la
+          technicité du Web. Aujourd’hui, je suis prêt à transformer cette
+          passion en métier et à mettre ma persévérance au service de projets
+          qui font sens.
+        </p>
+      </div>
     </div>
-    
 
-</div>
+    <!-- FOOTER -->
 
-
-
-
-
-<!-- FOOTER -->
-
-<footer> <p> &copy; Robin Craeye - Site de préformation <img src="/images/logo.png" alt="Logo_robin"></p> </footer>
-
-</body>
+    <footer>
+      <p>
+        &copy; Robin Craeye - Site de préformation
+        <img src="images/logo.png" alt="Logo_robin" />
+      </p>
+    </footer>
+  </body>
 </html>
