--- a/rapport.html
+++ b/rapport.html
@@ -1,98 +1,126 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="fr">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/css/style.css">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="css/style.css" />
     <title>Accueil</title>
-</head>
-<body>
+  </head>
+  <body>
     <!-- HEADER -->
 
-<header>
-        <h1>Site de Préformation de Robin Craeye</h1>
-</header>
+    <header>
+      <h1>Site de Préformation de Robin Craeye</h1>
+    </header>
 
     <!-- NAV -->
 
-<aside>
-    <div class="navbar">
-    <nav>
-        <ul>
+    <aside>
+      <div class="navbar">
+        <nav>
+          <ul>
             <li><a href="index.html">Accueil</a></li>
             <li><a href="rapport.html">Rapport</a></li>
             <li><a href="interview.html">Interview</a></li>
             <li><a href="parcours.html">Parcours</a></li>
             <li><a href="conclusion.html">Conclusion</a></li>
-            <li><img src="/images/logo.png" alt="Logo_robin"></li>
-        </ul>
-    </nav>
-    </div>
-</aside>
-    
-<div class="container">
-    <div class="titre"><h1> Rapport d'entreprise</h1></div>
-    <div class="titre"><h3>REiMAGINE</h3></div>
-<div class="container-subtitle"></div>
-<div class="rapport-intro">
-<p><strong>REIMAGINE</strong> est une société de conseil et de développement technologique située à Bruxelles. Fondée sur une vision moderne du service numérique, elle se positionne à l'intersection précise entre le conseil stratégique et la réalisation technique.</p>
-<img src="/images/logo-reimage.png" alt="Logo_Reimagine">
-</div>
+            <li><img src="images/logo.png" alt="Logo_robin" /></li>
+          </ul>
+        </nav>
+      </div>
+    </aside>
 
-<div class="entreprise-id">
-    <div class="entreprise-box">
-        <p>Secteur d'activité</p>
-        <h2>Développement WEB</h2>
+    <div class="container">
+      <div class="titre"><h1>Rapport d'entreprise</h1></div>
+      <div class="titre"><h3>REiMAGINE</h3></div>
+      <div class="container-subtitle"></div>
+      <div class="rapport-intro">
+        <p>
+          <strong>REIMAGINE</strong> est une société de conseil et de
+          développement technologique située à Bruxelles. Fondée sur une vision
+          moderne du service numérique, elle se positionne à l'intersection
+          précise entre le conseil stratégique et la réalisation technique.
+        </p>
+        <img src="images/logo-reimage.png" alt="Logo_Reimagine" />
+      </div>
+
+      <div class="entreprise-id">
+        <div class="entreprise-box">
+          <p>Secteur d'activité</p>
+          <h2>Développement WEB</h2>
+        </div>
+        <div class="entreprise-box-b">
+          <p>Type de clients</p>
+          <h2>PME & GE</h2>
+        </div>
+      </div>
+      <div class="entreprise-id">
+        <div class="entreprise-box">
+          <p>Structure</p>
+          <h2>AGILE</h2>
+        </div>
+        <div class="entreprise-box-b">
+          <p>Taille</p>
+          <h2>~ 20 personnes</h2>
+        </div>
+      </div>
+      <div class="entreprise-id">
+        <div class="entreprise-box">
+          <p>Commission Paritaire</p>
+          <h2>200</h2>
+        </div>
+        <div class="entreprise-box-b">
+          <p>Localisation</p>
+          <h2>Zaventem</h2>
+        </div>
+      </div>
+      <div class="container-subtitle"></div>
+      <div class="conclusion-entreprise">
+        <img src="images/reimagine_logo_fond.png" alt="Reimagine_Logo" />
+        <h2>Organisation et Méthodologie</h2>
+        <div class="container-subtitle"></div>
+
+        <p>
+          <strong>L'approche "End-to-End" :</strong> <em>REIMAGINE </em> gère le
+          projet de l'idée jusqu'à la mise en production.
+        </p>
+        <p>
+          <strong>Les différents rôles :</strong> <br />
+          <strong>- Le pôle Fonctionnel :</strong> Il fait le pont entre le
+          besoin business du client et la réalité technique. <br />
+          <strong>- Le pôle Technique :</strong> Composé de développeurs qui
+          travaillent souvent en binôme ou en petites équipes selon l'ampleur du
+          projet.
+        </p>
+        <p>
+          <strong>Environnement Technique (Stack) :</strong> L'entreprise
+          utilise des technologies robustes et modernes, adaptées à la
+          complexité des demandes :
+        </p>
+        <p>
+          <strong>- .NET (C#) :</strong> Privilégié pour les projets d'envergure
+          nécessitant une architecture complexe.
+        </p>
+        <p>
+          <strong>- Python :</strong> Le langage de référence pour tout ce qui
+          touche à l'Intelligence Artificielle, l'automatisation et la Data
+          Science.
+        </p>
+        <p><strong>Localisation :</strong> 6 Lenneke Marelaan 1932 Zaventem</p>
+        <p>
+          <strong>Commission Paritaire :</strong> CP200, en général dans le
+          milieu nous retrouvons cette CP.
+        </p>
+      </div>
     </div>
-    <div class="entreprise-box-b">
-        <p>Type de clients</p>
-        <h2>PME & GE</h2>
-    </div>
-</div>
-<div class="entreprise-id">
-    <div class="entreprise-box">
-        <p>Structure</p>
-        <h2>AGILE</h2>
-    </div>
-    <div class="entreprise-box-b">
-        <p>Taille</p>
-        <h2>~ 20 personnes</h2>
-    </div>
-</div>
-<div class="entreprise-id">
-    <div class="entreprise-box">
-        <p>Commission Paritaire</p>
-        <h2>200</h2>
-    </div>
-    <div class="entreprise-box-b">
-        <p>Localisation</p>
-        <h2>Zaventem</h2>
-    </div>
-</div>
-<div class="container-subtitle"></div>
-<div class="conclusion-entreprise">
-    <img src="/images/reimagine_logo_fond.png" alt="Reimagine_Logo"><h2>Organisation et Méthodologie</h2>
     <div class="container-subtitle"></div>
-    
-    <p>
-<strong>L'approche "End-to-End" :</strong> <em>REIMAGINE </em> gère le projet de l'idée jusqu'à la mise en production.</p>
-<p><strong>Les différents rôles :</strong> <br>
-	 <strong>- Le pôle Fonctionnel :</strong> Il fait le pont entre le besoin business du client et la réalité technique. <br>
-  	 <strong>- Le pôle Technique :</strong> Composé de développeurs qui travaillent souvent en binôme ou en petites équipes selon l'ampleur du projet.</p>
-<p><strong>Environnement Technique (Stack) :</strong> L'entreprise utilise des technologies robustes et modernes, adaptées à la complexité des demandes :</p>
-<p><strong>- .NET (C#) :</strong> Privilégié pour les projets d'envergure nécessitant une architecture complexe.</p>
-<p><strong>- Python :</strong> Le langage de référence pour tout ce qui touche à l'Intelligence Artificielle, l'automatisation et la Data Science.
-</p>
-<p><strong>Localisation :</strong> 6 Lenneke Marelaan 1932 Zaventem</p>
-<p><strong>Commission Paritaire :</strong> CP200, en général dans le milieu nous retrouvons cette CP.</p>
-
-</div>
-
-
-</div>
-<div class="container-subtitle"></div>
     <!-- FOOTER -->
 
-<footer> <p> &copy; Robin Craeye - Site de préformation <img src="/images/logo.png" alt="Logo_robin"></p> </footer>
-</body>
+    <footer>
+      <p>
+        &copy; Robin Craeye - Site de préformation
+        <img src="images/logo.png" alt="Logo_robin" />
+      </p>
+    </footer>
+  </body>
 </html>
